crates/apollo-compiler/test_data/diagnostics/0009_operation_with_undefined_variables_in_fragment.txt
Error: variable `$value` is not defined
    ╭─[0009_operation_with_undefined_variables_in_fragment.graphql:10:21]
    │
 10 │     price(setPrice: $value)
    │                     ───┬──  
    │                        ╰──── not found in this scope
────╯

